# ProjectWokflow

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: ProjectWorkflow.cmake  ProjectWorkflow_Wrappers.cmake  semver.cmake
testLibA/: CMakeLists.txt  a.c
testLibA/include/liba/: a.h
testLibB/: CMakeLists.txt  b.c
testLibB/include/libb/: b.h
testMinimal/: CMakeLists.txt  minimal_test.c
testSemver/: CMakeLists.txt
testTransitive/: CMakeLists.txt  transitive_test.c
